# rocket-league-gymnasium-sim

./: README.md  pyproject.toml
rlgymnasium_sim/: gym.py  make.py
rlgymnasium_sim/envs/: match.py
rlgymnasium_sim/simulator/: player.py  rocket_sim_game.py
rlgymnasium_sim/utils/action_parsers/: action_parser.py  continuous_act.py  default_act.py  discrete_act.py
rlgymnasium_sim/utils/gamestates/: game_state.py  physics_object.py  player_data.py
rlgymnasium_sim/utils/obs_builders/: advanced_obs.py  default_obs.py  obs_builder.py
rlgymnasium_sim/utils/reward_functions/: combined_reward.py  default_reward.py  reward_function.py
rlgymnasium_sim/utils/reward_functions/common_rewards/: ball_goal_rewards.py  conditional_rewards.py  misc_rewards.py  player_ball_rewards.py
rlgymnasium_sim/utils/state_setters/: default_state.py  random_state.py  state_setter.py
rlgymnasium_sim/utils/state_setters/wrappers/: car_wrapper.py  physics_wrapper.py  state_wrapper.py
rlgymnasium_sim/utils/terminal_conditions/: common_conditions.py  terminal_condition.py
