[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgymnasium-sim"
version = "0.1.0"
description = "A clone of RLGym for use with RocketSim and Gymnasium in reinforcement learning projects."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["rocket-league", "rocketsim", "gymnasium", "reinforcement-learning", "simulation"]
authors = [
  {name = "Lucas Emery"},
  {name = "Matthew Allen"},
  {name = "Zealan"},
  {name = "Mtheal"},
  {name = "Ben Burns"},
]
maintainers = [
  {name = "Ben Burns", email = "benjamin.c.burns@gmail.com"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Linux",
  "Programming Language :: Python",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Until there is a stable 1.0 release of Gymnasium, this will be pinned
  # to version ranges that are known to be compatible.
  "gymnasium>=0.26,<=0.28",
  "numpy>=1.19"
]

[project.urls]
repository = "https://github.com/benjamincburns/rocket-league-gymnasium-sim.git"
upstream_repository = "https://github.com/AechPro/rocket-league-gym-sim.git"
issue_tracker = "https://github.com/benjamincburns/rocket-league-gymnasium-sim/issues"
